--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ pages:
   image: python:3.9-slim
   before_script:
     - apt-get update && apt-get install make --no-install-recommends -y
-    - python -m pip install sphinx furo sphinx_rtd_theme
+    - python -m pip install -r requirements.txt
   script:
     - cd docs && make html
   after_script:
