--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,15 @@
 name = "LORE_sa"
 version = "0.0.1"
 requires-python = ">=3.6"
+description = "LOREM explainer package"
+readme = "README.rst"
+
 [build-system]
-requires = ["setuptools",
-    "wheel",
-    "numpy~=1.21.6",
-    "pandas~=1.3.5"]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
 
 [tool.setuptools.dynamic]
+readme = {file = ["README.md"]}
 dependencies = {file = ["requirements.txt"]}
+
