--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ deap~=1.3.3
 bitarray~=2.7.3
 sphinx
 furo
-sphinx_rtd_theme
+sphinx_rtd_theme~=1.2.0
 sphinx_material
 category_encoders
 scikit-multilearn~=0.2.0
