--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ scikit-learn~=1.0.2
 imblearn~=0.0
 deap~=1.3.3
 bitarray~=2.7.3
-sphinx~=4.5
+sphinx
 furo
-sphinx_rtd_theme~=1.2.0
+sphinx_rtd_theme
 sphinx_material
 category_encoders
 scikit-multilearn~=0.2.0
