--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-numpy~=1.21.6
-pandas~=1.3.5
-scipy~=1.7.3
-joblib~=1.2.0
-scikit-learn~=1.0.2
-imblearn~=0.0
-deap~=1.3.3
-bitarray~=2.7.3
-sphinx
+numpy
+pandas
+scipy
+joblib
+scikit-learn~=1.2.0
+imblearn
+deap
+bitarray
+sphinx~=7.2.6
 furo
 sphinx_rtd_theme
 sphinx_material
