--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,9 @@
-[project]
-name = "LORE_sa"
-version = "0.0.1"
-requires-python = ">=3.11"
-description = "LOREM explainer package"
-readme = "README.rst"
-
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
+# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
+requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
 build-backend = "setuptools.build_meta"
 
-
-[tool.setuptools.dynamic]
-readme = {file = ["README.md"]}
-dependencies = {file = ["requirements.txt"]}
-
+[tool.setuptools_scm]
+# For smarter version schemes and other configuration options,
+# check out https://github.com/pypa/setuptools_scm
+version_scheme = "no-guess-dev"
