updating documentation and dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,20 +5,20 @@
 
 [metadata]
 name = LORE_sa
-description = Add a short description here!
+description = LORE is a Python package for Local Rule-based Explanations
 author = Salvo Rinzivillo
 author_email = rinzivillo@isti.cnr.it
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://xai-project.eu/news/LORE_sa
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+    Documentation = https://github.com/kdd-lab/LORE_sa
+    Source = https://github.com/kdd-lab/LORE_sa
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
-#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
+    Tracker = https://github.com/kdd-lab/LORE_sa/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
 #    Download = https://pypi.org/project/PyScaffold/#files
 #    Twitter = https://twitter.com/PyScaffold
@@ -48,8 +48,15 @@ package_dir =
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    importlib-metadata; python_version<"3.8"
-
+    importlib-metadata; python_version>="3.10"
+    scikit-image
+    scikit-learn
+    matplotlib
+    jupyter
+    altair==4.2.2
+    pandas
+    numpy
+    deap
 
 [options.packages.find]
 where = src
