updating documentation and dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,28 @@ MANIFEST
 .venv*/
 .conda*/
 .python-version
+/docs/source/generated/lore_sa.bbox.AbstractBBox.rst
+/docs/source/generated/lore_sa.dataset.Dataset.rst
+/docs/source/generated/lore_sa.dataset.TabularDataset.rst
+/docs/source/generated/lore_sa.dataset.utils.rst
+/docs/source/generated/lore_sa.discretizer.Discretizer.rst
+/docs/source/generated/lore_sa.discretizer.RMEPDiscretizer.rst
+/docs/source/generated/lore_sa.encoder_decoder.ColumnTransformerEnc.rst
+/docs/source/generated/lore_sa.encoder_decoder.EncDec.rst
+/docs/source/generated/lore_sa.explanation.Explanation.rst
+/docs/source/generated/lore_sa.explanation.ExplanationEncoder.rst
+/docs/source/generated/lore_sa.explanation.ImageExplanation.rst
+/docs/source/generated/lore_sa.explanation.json2explanation.rst
+/docs/source/generated/lore_sa.explanation.MultilabelExplanation.rst
+/docs/source/generated/lore_sa.explanation.TextExplanation.rst
+/docs/source/generated/lore_sa.neighgen.GeneticGenerator.rst
+/docs/source/generated/lore_sa.neighgen.RandomGenerator.rst
+/docs/source/generated/lore_sa.rule.Expression.rst
+/docs/source/generated/lore_sa.rule.json2expression.rst
+/docs/source/generated/lore_sa.rule.json2rule.rst
+/docs/source/generated/lore_sa.rule.Rule.rst
+/docs/source/generated/lore_sa.rule.RuleEncoder.rst
+/docs/source/generated/lore_sa.surrogate.DecisionTreeSurrogate.rst
+/docs/source/generated/lore_sa.surrogate.Surrogate.rst
+/docs/source/generated/lore_sa.util.rst
+/tests/resources/adult_random_forest.pkl
