--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,14 @@
 name: Run Tests
 
 on:
-  push:
-  pull_request:
+  push: 
+    branches:
+      - main
+      - dev
+  pull_request: 
+    branches:
+      - main
+
 
 jobs:
   test:
