--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,6 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run tests
-      run: python -m pytest
-    - working-directory: ./tests
+      working-directory: ./tests
+      run: |
+        python -m pytest
