--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,5 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run tests
-      run: |
-        python -m pytest
+      working-directory: .
+      run: python -m pytest
